--- a/Echo-Chamber/package.json
+++ b/Echo-Chamber/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.11.0",
     "lucide-react": "^0.536.0",
     "next": "15.4.5",
+    "next-sitemap": "^4.2.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-markdown": "^10.1.0"
